<resources>
    <string name="app_name">Task App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="task_no">Task No:_</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="skip">Skip</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>