<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@layout/fragment_on_board">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.taskapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.taskapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.taskapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/formFragment"
        android:name="com.example.taskapp.ui.form.FormFragment"
        android:label="fragment_form"
        tools:layout="@layout/fragment_form" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.taskapp.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/onBoardFragment2"
        android:name="com.example.taskapp.ui.onBoardScreen.OnBoardFragment"
        android:label="item_on_board"
        tools:layout="@layout/item_on_board" />
</navigation>